--- a/app/assets/stylesheets/revised/pages/news/show.scss
+++ b/app/assets/stylesheets/revised/pages/news/show.scss
@@ -59,46 +59,6 @@
     margin: 1em 0 0 1em;
   }
 
-  .page-content {
-    blockquote {
-      background: $gray-lighter;
-      border-left: 10px solid #ccc;
-      margin: 1.5em 10px 0;
-      padding: 0.5em 10px;
-      quotes: "“" "”" "‘" "’";
-
-      &.beside-float-40 {
-        margin: 0;
-      }
-    }
-
-    blockquote:before {
-      color: #ccc;
-      content: open-quote;
-      font-size: 3em;
-      vertical-align: -0.4em;
-      line-height: 0.1em;
-      margin-right: 0.25em;
-    }
-
-    blockquote:after {
-      content: close-quote;
-      color: $gray-lighter;
-      font-size: 4px;
-    }
-
-    blockquote p {
-      display: inline;
-    }
-
-    .blockquote-cite {
-      text-align: right;
-      padding: 0.5em 10px 1em 0;
-      color: $gray;
-      font-weight: 200;
-    }
-  }
-
   //________________________
   //
   // Listicles!
@@ -138,5 +98,46 @@
     .next {
       float: right;
     }
+  }
+}
+
+.page-content {
+  blockquote {
+    background: $gray-lighter;
+    border-left: 10px solid #ccc;
+    margin: 1.5em 10px 0;
+    padding: 0.5em 10px;
+    quotes: "“" "”" "‘" "’";
+
+    &.beside-float-40 {
+      margin: 0;
+    }
+  }
+
+  blockquote:before {
+    color: #ccc;
+    content: open-quote;
+    font-size: 3em;
+    vertical-align: -0.4em;
+    line-height: 0.1em;
+    margin-right: 0.25em;
+  }
+
+  blockquote:after {
+    content: close-quote;
+    color: $gray-lighter;
+    font-size: 4px;
+  }
+
+  blockquote p {
+    display: inline;
+  }
+
+  .blockquote-cite {
+    text-align: right;
+    padding: 0 10px 1em 0;
+    line-height: 2em;
+    color: $gray;
+    font-style: italic;
   }
 }
