--- a/app/views/info/lightspeed.html.haml
+++ b/app/views/info/lightspeed.html.haml
@@ -1,4 +1,4 @@
-.vendor-signup
+.vendor-signup.page-content
   %h1
     How to: Lightspeed Retail and Bike Index Integration
   %article
@@ -47,11 +47,10 @@
       %p
         We're happy to answer any questions you have about making Bike Index work with Lightspeed Retail and we're always looking for ways to improve the integration. Please #{link_to "support@bikeindex.org", "mailto:support@bikeindex.org"} with any questions, concerns, comments, or suggestions.
 
-
-    %blockquote{ style: "margin-bottom: 0; font-style: italic;" }
-      I started Bike Index because I wanted to register bikes for my customers at the shop where I worked &mdash; with this integration, we're finally able to give shops a way to register bikes that doesn't interfere with selling them.
-    .blockquote-cite.less-strong.text-right
-      \- Seth Herr, Bike Index co-founder
+  %blockquote
+    I started Bike Index because I wanted to register bikes for my customers at the shop where I worked &mdash; with this integration, we finally give shops a way to register bikes that doesn't interfere with selling them.
+  .blockquote-cite
+    Seth Herr, Bike Index co-founder
 
 
   %article.padded.vendor-signup-form.bottom-padded#add_organization
