--- a/app/views/errors/unauthorized.html.erb
+++ b/app/views/errors/unauthorized.html.erb
@@ -1,7 +1,11 @@
 <div id="error-page-wrap">
   <h1 class="error-text">401</h1>
-  <p class="error-explanation">We're sorry, you aren't allowed to do that.</p>
+  <p class="error-explanation">
+    <%= t(".explanation") %>
+  </p>
   <h4 class="go-back">
-    <a class="back-link" onClick="history.go(-1);return true;">Send me back from whence I came!</a>
+    <a class="back-link" onClick="history.go(-1);return true;">
+      <%= t(".send_me_back") %>
+    </a>
   </h4>
 </div>
