--- a/app/views/admin/bikes/_bike.html.haml
+++ b/app/views/admin/bikes/_bike.html.haml
@@ -157,7 +157,7 @@
                 %td
                   Link to recover
                 %td
-                  %input.form-control{ disabled: true, type: 'text', value: edit_bike_recovery_url(bike_id: bike.id, token: stolen_record.find_or_create_recovery_link_token).to_s }
+                  %input.form-control{ type: 'text', value: edit_bike_recovery_url(bike_id: bike.id, token: stolen_record.find_or_create_recovery_link_token).to_s }
       .col-md-6
         %table.table-list
           %tbody
