--- a/app/views/info/_terms_text.html.erb
+++ b/app/views/info/_terms_text.html.erb
@@ -1,137 +1,197 @@
 <% file_path = @view_renderer.lookup_context.find_template(@virtual_path).identifier.gsub(/\A.*\/app\//i, 'app/') %>
+<%- change_history_url = "https://github.com/bikeindex/bike_index/tree/master/#{file_path}" %>
+
 <header>
-<h1>
-<a name="terms-of-service" class="anchor" href="#terms-of-service"><span class="mini-icon mini-icon-link"></span></a>Terms of Service</h1>
+  <h1>
+    <a name="terms-of-service" class="anchor" href="#terms-of-service">
+      <span class="mini-icon mini-icon-link">
+      </span></a>
+      <%= t('.terms_of_service') %>
+  </h1>
 
-<p>Last updated July 29th, 2017. Previous versions and the change history is <a href="https://github.com/bikeindex/bike_index/tree/master/<%= file_path %>">available here</a>.</p>
-
-<hr>
+  <p>
+  <%= t('.last_updated_html', link: link_to(t('.available_here'), change_history_url)) %>
+  </p>
+  <hr>
 </header>
 
 
 <h2>
   <a name="about-our-terms-of-service" class="anchor" href="#about-our-terms-of-service"><span class="mini-icon mini-icon-link"></span></a>
-  About our Terms of Service
+  <%= t('.about_our_terms_of_service') %>
 </h2>
 
-<p><strong>Welcome to Bike Index</strong>, a 501(c)(3) nonprofit. We've developed a publicly-accessible bike registration service (the "Service") that gives you the ability to save and share your bikes on the internet.</p>
+<p><%= t('.welcome_to_bike_index_html') %></p>
 
-<p>By giving bike shops, biking organizations and police departments the ability to register bikes directly for their constituents we aim to incentivize bike registration, support local cycling culture and ensure accurate registrations. We have tried to draft this Terms of Service to be as simple and comprehensible as possible. Unfortunately, the realities of the legal world make that a very difficult task. So, should you have any questions or concerns, or simply want to better understand how we do things at Bike Index, please do not hesitate to <a href="https://www.bikeindex.org/contact_us">contact us</a>.</p>
+<p><%= t('.by_giving_bike_shops_html', contact_link: link_to("contact us", contact_us_path)) %></p>
 
 <h1 id="section_a">
   <a name="section-a-acceptance-of-terms" class="anchor" href="#section-a-acceptance-of-terms"><span class="mini-icon mini-icon-link"></span></a>
-  Section A: User's Acknowledgment and Acceptance of Terms
+  <%= t('.section_a_header') %>
 </h1>
 
 <ol>
   <li>
-    <p>By creating an "Account" and using the BikeIndex.org web site ("Service"), or any services of Bike Index, NFP ("Bike Index"), you are agreeing to be bound by the following terms and conditions ("Terms of Service"). IF YOU ARE ENTERING INTO THIS AGREEMENT ON BEHALF OF A COMPANY OR OTHER LEGAL ENTITY, YOU REPRESENT THAT YOU HAVE THE AUTHORITY TO BIND SUCH ENTITY, ITS AFFILIATES AND ALL USERS WHO ACCESS OUR SERVICES THROUGH YOUR ACCOUNT TO THESE TERMS AND CONDITIONS, IN WHICH CASE THE TERMS "YOU" OR "YOUR" SHALL REFER TO SUCH ENTITY, ITS AFFILIATES AND USERS ASSOCIATED WITH IT. IF YOU DO NOT HAVE SUCH AUTHORITY, OR IF YOU DO NOT AGREE WITH THESE TERMS AND CONDITIONS, YOU MUST NOT ACCEPT THIS AGREEMENT AND MAY NOT USE THE SERVICES.</p>
+    <p><%= t('.by_creating_account') %></p>
   </li>
   <li>
     <p>
-      If Bike Index makes material changes to these Terms, we will notify you by email or by posting a notice on our site before the changes are effective. Any new features that augment or enhance the current Service, including the release of new tools and resources, shall be subject to the Terms of Service. Continued use of the Service after any such changes shall constitute your consent to such changes. You can review the most current version of the Terms of Service at any time at: <a href="https://www.bikeindex.org/terms">bikeindex.org/terms</a>
+    <%- terms_link = link_to("bikeindex.org/terms", terms_path) %>
+    <%= t('.if_bike_index_html', terms_link: terms_link) %>
     </p>
   </li>
   <li>
-    <p>"Content" on the Service is defined by any information Users input into the service. Users are defined as those who utilize the Bike Index Service and agree to the Terms of Service. While Bike Index prohibits some conduct and Content on the Service, you understand and agree that Bike Index cannot be responsible for the Content posted on the Service and you nonetheless may be exposed to such materials. you agree to use the Service at your own risk. Violation of any of the terms below will result in the termination of your Account.</p>
+    <p>
+    <%= t('.content_on_the_service') %>
+    </p>
   </li>
 </ol>
 
 
 <h1 id="section_b">
   <a name="section-b-account-terms" class="anchor" href="#section-b-account-terms"><span class="mini-icon mini-icon-link"></span></a>
-  Section B: Account Terms
+  <%= t('.section_b_header') %>
 </h1>
 
 <ol>
   <li>
-    <p>You must be a human. Accounts registered by "bots" or other automated methods are not permitted.</p>
+    <p>
+    <%= t('.you_must_be_human') %>
+    </p>
   </li>
   <li>
-    <p>You must provide a valid email address in order to complete the signup process.</p>
+    <p>
+    <%= t('.you_must_provide_email') %>
+    </p>
   </li>
   <li>
-    <p>You are responsible for maintaining the security of your account and password. Bike Index cannot and will not be liable for any loss or damage from your failure to comply with this security obligation.</p>
+    <p>
+    <%= t('.you_are_responsible_for_security') %>
+    </p>
   </li>
   <li>
-    <p>You are responsible for all Content posted and activity that occurs under your account (even when Content is posted by others who have accounts under your account or access to your account).</p>
+    <p>
+    <%= t('.you_are_responsible_for_content') %>
+    </p>
   </li>
   <li>
-    <p>You may not use the Service for any illegal or unauthorized purpose. You must not, in the use of the Service, violate any laws in your jurisdiction (including but not limited to copyright or trademark laws).</p>
+    <p>
+    <%= t('.you_may_not_use_for_illegal') %>
+    </p>
   </li>
 </ol>
 
 
 <h1 id="section_c">
   <a name="section-c-modifications-to-the-service" class="anchor" href="#section-c-modifications-to-the-service"><span class="mini-icon mini-icon-link"></span></a>
-  Section C: Modifications to the service
+  <%= t('.section_c_header') %>
 </h1>
 
 <ol>
   <li>
-    <p>Bike Index reserves the right at any time and from time to time to modify or discontinue, temporarily or permanently, the Service (or any part thereof) with or without notice.</p>
+    <p>
+    <%= t('.bike_index_reserves') %>
+    </p>
   </li>
   <li>
-    <p>Bike Index shall not be liable to you or to any third party for any modification, suspension or discontinuance of the Service.</p>
+    <p>
+    <%= t('.bike_index_shall_not_be_liable') %>
+    </p>
   </li>
 </ol>
 
 <h1 id="section_d">
   <a name="section-d-copyright-and-content-ownership" class="anchor" href="#section-d-copyright-and-content-ownership"><span class="mini-icon mini-icon-link"></span></a>
-  Section D: Copyright and content ownership
+  <%= t('.section_d_header') %>
 </h1>
 
 <ol>
   <li>
-    <p>We claim no intellectual property rights over the material you provide to the Service. Your profile and materials uploaded remain yours. However, Content that you upload about your bikes can be viewed publicly, and setting your profile to be public will allow information you add to it to be viewed publicly. You agree to allow others to view this Content.</p>
+    <p>
+    <%= t('.we_claim_no_ip') %>
+    </p>
   </li>
   <li>
-    <p>Bike Index does not pre-screen Content, but Bike Index and its designee have the right (but not the obligation) in their sole discretion to refuse or remove any Content that is available via the Service.</p>
+    <p>
+    <%= t('.we_dont_prescreen_content') %>
+    </p>
   </li>
   <li>
-    <p>You shall defend Bike Index against any claim, demand, suit or proceeding made or brought against Bike Index by a third party alleging that your Content, or your use of the Service in violation of this Agreement, infringes or misappropriates the intellectual property rights of a third party or violates applicable law, and shall indemnify Bike Index for any damages finally awarded against, and for reasonable attorney’s fees incurred by, Bike Index in connection with any such claim, demand, suit or proceeding; provided, that Bike Index (a) promptly gives you written notice of the claim, demand, suit or proceeding; (b) gives you sole control of the defense and settlement of the claim, demand, suit or proceeding (provided that tou may not settle any claim, demand, suit or proceeding unless the settlement unconditionally releases Bike Index of all liability); and (c) provides to you all reasonable assistance, at your expense.</p>
+    <p>
+    <%= t('.you_shall_defend_bike_index') %>
+    </p>
   </li>
 </ol>
 
 
 <h1 id="section_e">
-  <a name="section-e-general-conditions" class="anchor" href="#section-e-general-conditions"><span class="mini-icon mini-icon-link"></span></a>
-  Section E: General Conditions
+  <a name="section-e-general-conditions" class="anchor" href="#section-e-general-conditions">
+    <span class="mini-icon mini-icon-link">
+    </span>
+  </a>
+  <%= t('.section_e_header') %>
 </h1>
 
 <ol>
   <li>
-    <p>Your use of the Service is at your sole risk. The service is provided on an "as is" and "as available" basis.</p>
+    <p>
+    <%= t('.your_use_of_the_service') %>
+    </p>
   </li>
   <li>
-    <p>Support for Bike Index services is currently only available in English, via email.</p>
+    <p>
+    <%= t('.support_for_bike_index_services') %>
+    </p>
   </li>
   <li>
-    <p>You understand that Bike Index uses third party vendors and hosting partners to provide the necessary hardware, software, networking, storage, and related technology required to run the Service.</p>
+    <p>
+    <%= t('.third_party_vendors') %>
+    </p>
   </li>
   <li>
-    <p>You must not modify, adapt or hack the Service or modify another website so as to falsely imply that it is associated with the Service, Bike Index, or any other Bike Index service.</p>
+    <p>
+    <%= t('.you_must_notify') %>
+    </p>
   </li>
   <li>
-    <p>You agree not to sell, resell or exploit any portion of the Service, use of the Service, or access to the Service without the express written permission by Bike Index.</p>
+    <p>
+    <%= t('.you_agree_not_to_resell') %>
+    </p>
   </li>
   <li>
-    <p>We may, but have no obligation to, remove Content and Accounts containing Content that we determine in our sole discretion are unlawful, offensive, threatening, libelous, defamatory, pornographic, obscene or otherwise objectionable or violates any party's intellectual property or these Terms of Service.</p>
+    <p>
+    <%= t('.we_may_remove_content') %>
+    </p>
   </li>
   <li>
-    <p>Verbal, physical, written or other abuse (including threats of abuse or retribution) of any Bike Index customer, employee, member, or officer will result in immediate account termination.</p>
+    <p>
+    <%= t('.no_abuse') %>
+    </p>
   </li>
   <li>
-    <p>You understand that the technical processing and transmission of the Service, including your Content, may be transfered unencrypted and involve (a) transmissions over various networks; and (b) changes to conform and adapt to technical requirements of connecting networks or devices.</p>
+    <p>
+    <%= t('.may_be_terminated') %>
+    </p>
   </li>
   <li>
-    <p>You must not upload, post, host, or transmit unsolicited email, SMSs, or "spam" messages.</p>
+    <p>
+    <%= t('.no_spam') %>
+    </p>
   </li>
   <li>
-    <p>Bike Index does not warrant that (i) the service will meet your specific requirements, (ii) the service will be uninterrupted, timely, secure, or error-free, (iii) the results that may be obtained from the use of the service will be accurate or reliable, (iv) the quality of any products, services, information, or other material purchased or obtained by you through the service will meet your expectations, and (v) any errors in the Service will be corrected.</p>
+    <p>
+    <%= t('.best_effort') %>
+    </p>
   </li>
   <li>
-    <p>The failure of Bike Index to exercise or enforce any right or provision of the Terms of Service shall not constitute a waiver of such right or provision. The Terms of Service constitutes the entire agreement between you and Bike Index and govern your use of the Service, superseding any prior agreements between you and Bike Index (including, but not limited to, any prior versions of the Terms of Service). You agree that these Terms of Service and your use of the Service are governed under Illinois law.</p>
+    <p>
+    <%= t('.no_waiver') %>
+    </p>
   </li>
-  <li><p>Questions about the Terms of Service should be sent to <a href="mailto:contact@bikeindex.org">contact@bikeindex.org</a>.</p></li>
+  <li>
+    <p>
+    <%- contact_email_link = link_to("contact@bikeindex.org", "mailto:contact@bikeindex.org") %>
+    <%= t('.questions_html', contact_email_link: contact_email_link) %>
+    </p>
+  </li>
 </ol>
