--- a/app/views/info/privacy.html.erb
+++ b/app/views/info/privacy.html.erb
@@ -1,79 +1,113 @@
 <% file_path = @view_renderer.lookup_context.find_template(@virtual_path).identifier.gsub(/\A.*\/app\//i, 'app/') %>
+<%- change_history_url = "https://github.com/bikeindex/bike_index/tree/master/#{file_path}" %>
+<%- terms_link = link_to(t(".terms_of_service"), terms_path) %>
+
 <div id="legal-terms" class="inner-recep legal-content">
   <header>
-  <h1>
-    <a name="privacy-policy" class="anchor" href="#privacy-policy"><span class="mini-icon mini-icon-link"></span></a>
-    Privacy Policy
-  </h1>
-  <p>Last updated July 29th, 2017. Previous versions and the change history is <a href="https://github.com/bikeindex/bike_index/tree/master/<%= file_path %>">available here</a>.</p>
+    <h1>
+      <a name="privacy-policy" class="anchor" href="#privacy-policy">
+        <span class="mini-icon mini-icon-link"></span></a>
+      Privacy Policy
+    </h1>
 
-  <hr>
+    <p>
+    <%= t('.last_updated_html', link: link_to(t('.available_here'), change_history_url)) %>
+    </p>
+
+    <hr>
   </header>
 
   <h2>
     <a name="privacy-general-information" class="anchor" href="#privacy-general-information"><span class="mini-icon mini-icon-link"></span></a>
-    General Information
+    <%= t('.general_information') %>
   </h2>
-  
-  <p>Please see the <%= link_to 'Terms of Service', terms_path %> for definitions of terms.</p>
-  
-  <p>We collect the e-mail addresses and other shared personal information of those who communicate with us, aggregate information on the pages Users access or visit and the functions Users perform on pages, and information volunteered by Users (such as survey information and/or site registrations). The information we collect is used to improve the content of our Web pages and the quality of our Service, and is not shared with or sold to other organizations for commercial purposes, except to provide products or services you've requested, when we have your permission, or under the following circumstances:</p>
 
-  <p>It is necessary to share information in order to investigate, prevent, or take action regarding illegal activities, suspected fraud, situations involving potential threats to the physical safety of any person, violations of Terms of Service of the specific application, or as otherwise required by law.</p>
+  <p>
+  <%= t('.see_terms_link_html', terms_link: terms_link) %>
+  </p>
 
-  <p>We transfer information about you if Bike Index is acquired by or merged with another company. In this unlikely event, Bike Index will notify you via e-mail before information about you is transferred and becomes subject to a different privacy policy.</p>
+  <p>
+  <%= t('.general_information_p1') %>
+  </p>
+
+  <p>
+  <%= t('.general_information_p2') %>
+  </p>
+
+  <p>
+  <%= t('.general_information_p3') %>
+  </p>
 
   <h2>
     <a name="privacy-information-gathering-and-usage" class="anchor" href="#information-gathering-and-usage"><span class="mini-icon mini-icon-link"></span></a>
-    Information Gathering and Usage
+    <%= t('.information_gathering') %>
   </h2>
 
-  <p>When you register for Bike Index we may ask for information such as your name, email address, billing address, or phone number. The only required field is e-mail. Whatever you choose to share, You can either show or hide from the public on your Bike Index Account.</p>
+  <p>
+  <%= t('.information_gathering_p1') %>
+  </p>
 
-  <p>Bike Index uses collected information for the following general purposes: provision of products and services, identification and authentication, services improvement, contact, and research.</p>
+  <p>
+  <%= t('.information_gathering_p2') %>
+  </p>
 
   <h2>
     <a name="cookies" class="anchor" href="#cookies"><span class="mini-icon mini-icon-link"></span></a>
-    Cookies
+    <%= t('.cookies') %>
   </h2>
 
-  <p>A cookie is a small amount of data, which often includes an anonymous unique identifier, that is sent to your browser from a web site's computers and is stored on your computer's hard drive. The stored information helps you connect more quickly to sites you’ve previously visited.</p>
+  <p>
+  <%= t('.cookies_p1') %>
+  </p>
 
-  <p>Cookies are required to use Bike Index Service.</p>
+  <p>
+  <%= t('.cookies_p2') %>
+  </p>
 
-  <p>We use cookies to record current session information, but do not use permanent cookies. For example, you are required to re-login to your Bike Index account after a certain period of time has elapsed to protect you against others accidentally or intentionally accessing your Account contents.</p>
+  <p>
+  <%= t('.cookies_p3') %>
+  </p>
 
 
   <h2>
     <a name="data-storage" class="anchor" href="#data-storage"><span class="mini-icon mini-icon-link"></span></a>
-    Data Storage
-  </h2>
-
-  <p>Bike Index uses third party vendors and hosting partners to provide the necessary hardware, software, networking, storage, and related technology required to run Bike Index. Although Bike Index does own the code, databases, and all rights to Bike Index application, you retain all rights to your data.</p>
-
-  <h2>
-    <a name="disclosure" class="anchor" href="#disclosure"><span class="mini-icon mini-icon-link"></span></a>
-    Disclosure
+    <%= t('.data_storage') %>
   </h2>
 
   <p>
-    Bike Index may disclose personally identifiable information under special circumstances, such as to comply with subpoenas or when your actions violate the <a href="https://bikeindex.org/terms">Terms of Service</a>.
+  <%= t('.data_storage_p1') %>
+  </p>
+
+  <h2>
+    <a name="disclosure" class="anchor" href="#disclosure"><span class="mini-icon mini-icon-link"></span></a>
+    <%= t('.disclosure') %>
+  </h2>
+
+  <p>
+  <%= t('.disclosure_p1_html') %>
   </p>
 
   <h2>
     <a name="changes" class="anchor" href="#changes"><span class="mini-icon mini-icon-link"></span></a>
-    Changes
+    <%= t('.changes') %>
   </h2>
 
-  <p>Bike Index may periodically update this policy. We will notify you about significant changes by sending a notice to the primary email address specified in your Bike Index Service Account or by placing a prominent notice on our site. Such notices shall be considered to be received by you within 24 hours of the time it is posted to our website or emailed to you unless we receive notice that the email was not delivered.</p>
+  <p>
+  <%= t('.changes_p1') %>
+  </p>
 
-  <p>You retain the right to access, amend, correct or delete your personal information where it is inaccurate at any time. To do so, please contact <a href="mailto:contact@bikeindex.org">contact@bikeindex.org</a>.</p> 
+  <p>
+  <%= t('.changes_p2_html') %>
+  </p>
 
 
   <h2>
     <a name="questions" class="anchor" href="#questions"><span class="mini-icon mini-icon-link"></span></a>
-    Questions
+    <%= t('.questions') %>
   </h2>
 
-  <p>Any questions about this Privacy Policy should be addressed to <a href="mailto:contact@bikeindex.org">contact@bikeindex.org</a></p>
+  <p>
+  <%= t('.questions_p1_html') %>
+  </p>
+
 </div>
