--- a/app/assets/stylesheets/revised/pages/info/about.scss
+++ b/app/assets/stylesheets/revised/pages/info/about.scss
@@ -20,35 +20,23 @@ $hover-about-social-color: lighten($gray-light, 15%);
       width: 8 * $vertical-height;
     }
 
-    svg {
-      display: inline-block;
-      max-height: 6 * $vertical-height;
-    }
-
-    span.social-link-text {
-      display: block;
-      margin-top: -0.5em;
+    .social-link-text {
       color: $initial-about-social-color;
-    }
-
-    .svgpath,
-    span.social-link-text {
+      display: block;
       fill: $initial-about-social-color;
+      margin-top: -0.5em;
       transition: all 0.05s linear;
     }
 
     a {
       display: block;
       position: relative;
+      color: inherit;
 
       &:hover,
       &:active {
         text-decoration: none;
         color: $hover-about-social-color;
-
-        .svgpath {
-          fill: $hover-about-social-color;
-        }
       }
     }
   }
