--- a/app/assets/stylesheets/revised/sections/legacy_content.scss
+++ b/app/assets/stylesheets/revised/sections/legacy_content.scss
@@ -128,3 +128,14 @@
     height: 100%;
   }
 }
+
+// Override some styles for the datatable
+#manufacturers-list {
+  width: 100%;
+  th {
+    padding-right: 8px !important;
+    &:after {
+      display: none !important;
+    }
+  }
+}
