--- a/app/views/manufacturers/index.html.haml
+++ b/app/views/manufacturers/index.html.haml
@@ -1,25 +1,24 @@
 - cache(['manufacturers_index', @manufacturers.maximum(:updated_at)]) do
   %h1
     Manufacturers we know about
-
-  %section.full-screen-table
-    %table#manufacturers-list.table.table-striped.table-bordered
-      %thead
-        %th
-          Name
-        %th.large-screens
-          Only makes components
-      %tbody
-        - @manufacturers.each do |manufacturer|
-          %tr
-            %td
-              - if manufacturer.website
-                %a{href: manufacturer.website}
-                  = manufacturer.name
-              - else
+  .mt-4
+  %table#manufacturers-list.table.table-striped.table-bordered.table-sm
+    %thead
+      %th
+        Name
+      %th.large-screens
+        Only makes components
+    %tbody
+      - @manufacturers.each do |manufacturer|
+        %tr
+          %td
+            - if manufacturer.website
+              %a{href: manufacturer.website}
                 = manufacturer.name
-            %td.large-screens.table-cell-check
-              = "&#x2713;".html_safe unless manufacturer.frame_maker
+            - else
+              = manufacturer.name
+          %td.large-screens.table-cell-check
+            = "&#x2713;".html_safe unless manufacturer.frame_maker
 
   %h2.padded
     OH NO! We're missing a manufacturer?
