--- a/app/views/info/about.html.haml
+++ b/app/views/info/about.html.haml
@@ -1,24 +1,21 @@
-%h1
-  About Bike Index
+- bikes_count = number_with_precision(Bike.count.round(-3), precision: 0, delimiter: ',')
+- partners_count = number_with_precision(Organization.count.round(-1), precision: 0, delimiter: ',')
+- nonprofit_blog_link = link_to(t(".nonprofit_status"), news_path("bike-index--now-a-nonprofit"))
+
+%h1= t(".about_bike_index")
 
 - cache('about_counts', expires_in: 24.hours) do
-  %p
-    Cofounded by Seth Herr and Bryan Hance in 2013, Bike Index is a #{link_to '501(c)(3) nonprofit', 'https://bikeindex.org/news/bike-index--now-a-nonprofit'}.
-  %p
-    It is the most widely used and successful bicycle registration service in the world with over #{number_with_precision(Bike.count.round(-3), precision: 0, delimiter: ',')} cataloged bikes, #{number_with_precision(Organization.count.round(-1), precision: 0, delimiter: ',')} community partners and tens of thousands of daily searches.
+  %p= t(".cofounded_by_html", description_link: nonprofit_blog_link)
+  %p= t(".widely_used", bikes_count: bikes_count, partners_count: partners_count)
+
+%p= t(".seth_built")
+
+%p= t(".merging_the_services")
+
+%p= t(".simple_efficient_effective")
 
 %p
-  Seth built Bike Index when he was a bike mechanic because he wanted to be able to register bikes for his customers. Bryan developed and ran a community driven bicycle recovery service (StolenBikeRegistry.com) that recovered bikes from the first week it was created in 2004.
-
-%p
-  Merging the two services Seth and Bryan created the universal bike registration service they both dreamed of&mdash;a database used and searched by individuals, bike shops, police departments and other apps. A bike registry that gives everyone the ability to register and recover bicycles.
-
-%p
-  Simple. Efficient. Effective.
-
-%p
-  %strong
-    Bike registration that works.
+  %strong= t(".bike_registration_that_works")
 
 .about-social
   %ul
@@ -35,78 +32,57 @@
         %i.fab.fa-instagram.fa-5x
         %span.social-link-text Instagram
 
-%h2
-  The team
+%h2= t(".the_team")
 
 %ul.about-people
   %li
     %p
-      = image_tag "who/seth-herr2.jpg", alt: 'Seth Herr', title: "Those are not official Bike Index arm warmers, we don't have Bike Index arm warmers"
-      %strong
-        Seth Herr
-      learned to program so that he could build Bike Index, because he was a bike mechanic and was frustrated that something like it didn't exist.
+      = image_tag "who/seth-herr2.jpg", alt: 'Seth Herr', title: t(".seth_herr_image_title")
+      = t(".seth_herr_bio_html")
   %li
     %p
       = image_tag "who/bryan-hance.jpg", alt: 'Bryan Hance'
-      %strong
-        Bryan Hance
-      created StolenBicycleRegistry.com in 2004 because 5 of his bikes were stolen in 9 years&mdash;and realized recovering bikes was really fun. He lives in Portland and recovers lots of bikes.
+      = t(".bryan_hance_bio_html")
   %li
     %p
       = image_tag 'who/craig-dalton1.jpg', alt: 'Craig Dalton'
-      %strong
-        Craig Dalton
-      thought he had the bike industry out of his system until Bike Index came knocking. Craig is bringing his entrepreneurial experience to the business side of Bike Index.
+      = t(".craig_dalton_bio_html")
   %li
     %p
       = image_tag 'who/lily-williams.jpg', alt: 'Lily Williams'
-      %strong
-        Lily Williams
-      has a master's degree from Medill School of Journalism but realized along the way that bikes are the most deserving recipients of words. She writes and communicates for Bike Index.
+      = t(".lily_williams_bio_html")
   %li
     %p
       = image_tag "who/jan-pecnik.jpg", alt: "Jan Pecnik"
-      %strong
-        Jan Pecnik
-      fell in love with bikes while studying his masters in the Netherlands, focusing on social entrepreneurship. After a couple of years of solo riding, he now helps Bike Index expand across Europe and beyond.
+      = t(".jan_pecnik_bio_html")
   %li
     %p
       = image_tag 'who/mike-oleon.jpg', alt: 'Mike Oleon'
-      %strong
-        Mike Oleon
-      does the graphic design and illustration for the Index. If anything looks good, it's probably his fault.
+      = t(".mike_oleon_bio_html")
 
 
-%h2.the-alumni
-  Alumni
+%h2.the-alumni.d-none
+  = t(".alumni")
 
-%ul.about-list.about-alumni-list
+%ul.about-list.about-alumni-list.d-none
   %li
     = image_tag "who/will-barrett.jpg", alt: 'Will Barrett'
-    %h4
-      Will Barrett
+    %h4 Will Barrett
   %li
     = image_tag "who/erin-vogel.jpg", alt: 'Erin Vogel'
-    %h4
-      Erin Vogel
+    %h4 Erin Vogel
   %li
     = image_tag "who/andrew-herr.jpg", alt: 'Andrew Herr'
-    %h4
-      Andrew Herr
+    %h4 Andrew Herr
   %li
     = image_tag "who/laura-nash.jpg", alt: 'Laura Nash'
-    %h4
-      Laura Nash
-%ul.about-list.final-list.about-alumni-list
+    %h4 Laura Nash
   %li
     = image_tag 'who/michael-catano.jpg', alt: 'Michael Catano'
-    %h4
-      Michael Catano
+    %h4 Michael Catano
   %li
     = image_tag "who/stephanie-scheurich1.jpg", alt: 'Stephanie Scheurich'
-    %h4
-      Stephanie Scheurich
+    %h4 Stephanie Scheurich
   %li
     = image_tag "who/bike-mike.jpg", alt: 'Mike Pickerd'
-    %h4
-      Mike Pickerd
+    %h4 Mike Pickerd
