--- a/app/views/customer_mailer/magic_login_link_email.html.haml
+++ b/app/views/customer_mailer/magic_login_link_email.html.haml
@@ -1,7 +1,5 @@
-%h4
-  Here is your passwordless sign in link
-%p{ style: 'margin-bottom: 2em;' }
-  Click the button below to sign in
+%h4{ style: 'margin-bottom: 2em;' }
+  Click the button below to sign in to Bike Index
 
 = link_to 'Sign in to Bike Index', @url, class: 'binx-button'
 
