better button text

--- a/app/views/admin/recovery_displays/_form.html.haml
+++ b/app/views/admin/recovery_displays/_form.html.haml
@@ -83,7 +83,7 @@
                 %span.not-using-bike-image
                   Use first image
                 %span.using-bike-image
-                  nvrmind
+                  nvrmind, upload an image
           - else
             Bike has no image
 
