--- a/app/views/landing_pages/ascend.html.haml
+++ b/app/views/landing_pages/ascend.html.haml
@@ -22,7 +22,7 @@
             - new_org_link = link_to t(".new_bike_shop_org"), new_organization_path
             = t(".sign_up_as_a_new_org_html", new_org_link: new_org_link)
           %li
-            - link_to t(".ascend_knowledge_base_article"), "https://ascendrms.uservoice.com/knowledgebase/articles/1904050"
+            - ascend_link = link_to t(".ascend_knowledge_base_article"), "https://ascendrms.uservoice.com/knowledgebase/articles/1904050"
             = t(".follow_the_setup_instructions_html", ascend_link: ascend_link)
 
           %li
